--- a/MyFavouriteDogBreed/index.html
+++ b/MyFavouriteDogBreed/index.html
@@ -27,29 +27,47 @@
         </ul>
         
         <hr>
-        <div class="list-group">
-            <h4 class="list-group-item-heading text-primary" id="appearance">GENERAL APPEARANCE</h4>
-            <p class="list-group-item-text">The Cocker Spaniel is the smallest member of the Sporting Group. He has a sturdy, compact body and a cleanly chiseled and refined head, with the overall dog in complete balance and of ideal size. He stands well up at the shoulder on straight forelegs with a topline sloping slightly toward strong, moderately bent, muscular quarters. He is a dog capable of considerable speed, combined with great endurance. Above all, he must be free and merry, sound, well balanced throughout and in action show a keen inclination to work. A dog well balanced in all parts is more desirable than a dog with strongly contrasting good points and faults.</p>        
+        <div class="row">
+            <div class="col-md-6">
+                <div class="list-group">
+                    <h4 class="list-group-item-heading text-primary" id="appearance">GENERAL APPEARANCE</h4>
+                    <p class="list-group-item-text">The Cocker Spaniel is the smallest member of the Sporting Group. He has a sturdy, compact body and a cleanly chiseled and refined head, with the overall dog in complete balance and of ideal size. He stands well up at the shoulder on straight forelegs with a topline sloping slightly toward strong, moderately bent, muscular quarters. He is a dog capable of considerable speed, combined with great endurance. Above all, he must be free and merry, sound, well balanced throughout and in action show a keen inclination to work. A dog well balanced in all parts is more desirable than a dog with strongly contrasting good points and faults.</p>        
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="list-group">
+                    <h4 class="list-group-item-heading text-primary" id="head">HEAD</h4>
+                    <p class="list-group-item-text">To attain a well-proportioned head, which must be in balance with the rest of the dog, it embodies the following: Expression-The expression is intelligent, alert, soft and appealing. Eyes-Eyeballs are round and full and look directly forward. The shape of the eye rims gives a slightly almond shaped appearance; the eye is not weak or goggled. The color of the iris is dark brown and in general the darker the better. Ears-Lobular, long, of fine leather, well feathered, and placed no higher than a line to the lower part of the eye. Skull-Rounded but not exaggerated with no tendency toward flatness; the eyebrows are clearly defined with a pronounced stop. The bony structure beneath the eyes is well chiseled with no prominence in the cheeks. </p>        
+                </div>
+            </div>
         </div>
-        <div class="list-group">
-            <h4 class="list-group-item-heading text-primary" id="head">HEAD</h4>
-            <p class="list-group-item-text">To attain a well-proportioned head, which must be in balance with the rest of the dog, it embodies the following: Expression-The expression is intelligent, alert, soft and appealing. Eyes-Eyeballs are round and full and look directly forward. The shape of the eye rims gives a slightly almond shaped appearance; the eye is not weak or goggled. The color of the iris is dark brown and in general the darker the better. Ears-Lobular, long, of fine leather, well feathered, and placed no higher than a line to the lower part of the eye. Skull-Rounded but not exaggerated with no tendency toward flatness; the eyebrows are clearly defined with a pronounced stop. The bony structure beneath the eyes is well chiseled with no prominence in the cheeks. </p>        
+        <div class="row">
+            <div class="col-md-6">
+                <div class="list-group">
+                    <h4 class="list-group-item-heading text-primary" id="body">BODY</h4>
+                    <p class="list-group-item-text">Neck-The neck is sufficiently long to allow the nose to reach the ground easily, muscular and free from pendulous "throatiness." It rises strongly from the shoulders and arches slightly as it tapers to join the head. Topline-sloping slightly toward muscular quarters. Body-The chest is deep, its lowest point no higher than the elbows, its front sufficiently wide for adequate heart and lung space, yet not so wide as to interfere with the straightforward movement of the forelegs. Ribs are deep and well sprung. Back is strong and sloping evenly and slightly downward from the shoulders to the set-on of the docked tail. The docked tail is set on and carried on a line with the topline of the back, or slightly higher; never straight up like a Terrier and never so low as to indicate timidity. When the dog is in motion the tail action is merry.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="list-group">
+                    <h4 class="list-group-item-heading text-primary" id="forequarters">FOREQUARTERS</h4>
+                    <p class="list-group-item-text">The shoulders are well laid back forming an angle with the upper arm of approximately 90 degrees which permits the dog to move his forelegs in an easy manner with forward reach. Shoulders are clean-cut and sloping without protrusion and so set that the upper points of the withers are at an angle which permits a wide spring of rib. When viewed from the side with the forelegs vertical, the elbow is directly below the highest point of the shoulder blade. Forelegs are parallel, straight, strongly boned and muscular and set close to the body well under the scapulae. The pasterns are short and strong. Dewclaws on forelegs may be removed. Feet compact, large, round and firm with horny pads; they turn neither in nor out.</p>
+                </div>
+            </div>
         </div>
-        <div class="list-group">
-            <h4 class="list-group-item-heading text-primary" id="body">BODY</h4>
-            <p class="list-group-item-text">Neck-The neck is sufficiently long to allow the nose to reach the ground easily, muscular and free from pendulous "throatiness." It rises strongly from the shoulders and arches slightly as it tapers to join the head. Topline-sloping slightly toward muscular quarters. Body-The chest is deep, its lowest point no higher than the elbows, its front sufficiently wide for adequate heart and lung space, yet not so wide as to interfere with the straightforward movement of the forelegs. Ribs are deep and well sprung. Back is strong and sloping evenly and slightly downward from the shoulders to the set-on of the docked tail. The docked tail is set on and carried on a line with the topline of the back, or slightly higher; never straight up like a Terrier and never so low as to indicate timidity. When the dog is in motion the tail action is merry.</p>
-        </div>
-        <div class="list-group">
-            <h4 class="list-group-item-heading text-primary" id="forequarters">FOREQUARTERS</h4>
-            <p class="list-group-item-text">The shoulders are well laid back forming an angle with the upper arm of approximately 90 degrees which permits the dog to move his forelegs in an easy manner with forward reach. Shoulders are clean-cut and sloping without protrusion and so set that the upper points of the withers are at an angle which permits a wide spring of rib. When viewed from the side with the forelegs vertical, the elbow is directly below the highest point of the shoulder blade. Forelegs are parallel, straight, strongly boned and muscular and set close to the body well under the scapulae. The pasterns are short and strong. Dewclaws on forelegs may be removed. Feet compact, large, round and firm with horny pads; they turn neither in nor out.</p>
-        </div>
-        <div class="list-group">
-            <h4 class="list-group-item-heading text-primary" id="coat">COAT</h4>
-            <p class="list-group-item-text">On the head, short and fine; on the body, medium length, with enough undercoating to give protection. The ears, chest, abdomen and legs are well feathered, but not so excessively as to hide the Cocker Spaniel's true lines and movement or affect his appearance and function as a moderately coated sporting dog. The texture is most important. The coat is silky, flat or slightly wavy and of a texture which permits easy care. Excessive coat or curly or cottony textured coat shall be severely penalized. Use of electric clippers on the back coat is not desirable. Trimming to enhance the dog's true lines should be done to appear as natural as possible.</p>
-        </div>
-        <div class="list-group">
-            <h4 class="list-group-item-heading text-primary" id="hindquarters">HINDQUARTERS</h4>
-            <p class="list-group-item-text">Hips are wide and quarters well rounded and muscular. When viewed from behind, the hind legs are parallel when in motion and at rest. The hind legs are strongly boned, and muscled with moderate angulation at the stifle and powerful, clearly defined thighs. The stifle is strong and there is no slippage of it in motion or when standing. The hocks are strong and well let down. Dewclaws on hind legs may be removed.</p>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="list-group">
+                    <h4 class="list-group-item-heading text-primary" id="coat">COAT</h4>
+                    <p class="list-group-item-text">On the head, short and fine; on the body, medium length, with enough undercoating to give protection. The ears, chest, abdomen and legs are well feathered, but not so excessively as to hide the Cocker Spaniel's true lines and movement or affect his appearance and function as a moderately coated sporting dog. The texture is most important. The coat is silky, flat or slightly wavy and of a texture which permits easy care. Excessive coat or curly or cottony textured coat shall be severely penalized. Use of electric clippers on the back coat is not desirable. Trimming to enhance the dog's true lines should be done to appear as natural as possible.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="list-group">
+                    <h4 class="list-group-item-heading text-primary" id="hindquarters">HINDQUARTERS</h4>
+                    <p class="list-group-item-text">Hips are wide and quarters well rounded and muscular. When viewed from behind, the hind legs are parallel when in motion and at rest. The hind legs are strongly boned, and muscled with moderate angulation at the stifle and powerful, clearly defined thighs. The stifle is strong and there is no slippage of it in motion or when standing. The hocks are strong and well let down. Dewclaws on hind legs may be removed.</p>
+                </div>
+            </div>
         </div>
         <hr>
         <h3 class="text-primary">More Information and Key Breed Facts</h3> 
